RESOLVED FIXED219138
[WTF] Fix a condition to check if statvfs() succeeds in getVolumeFreeSpace()
https://bugs.webkit.org/show_bug.cgi?id=219138
Summary [WTF] Fix a condition to check if statvfs() succeeds in getVolumeFreeSpace()
Yousuke Kimoto
Reported 2020-11-18 18:04:57 PST
statvfs() returns Zero on success, and -1 is returned on error. But getVolumeFreeSpace() of FileSystemPOSIX.cpp treats a non Zero value as success case. The condition is wrong.
Attachments
Patch to fix the condition. (1.43 KB, patch)
2020-11-18 18:11 PST, Yousuke Kimoto
no flags
Yousuke Kimoto
Comment 1 2020-11-18 18:11:47 PST
Created attachment 414524 [details] Patch to fix the condition.
EWS
Comment 2 2020-11-18 20:00:41 PST
Committed r270013: <https://trac.webkit.org/changeset/270013> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414524 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-18 20:01:46 PST
Note You need to log in before you can comment on or make changes to this bug.