[WTF] Fix a condition to check if statvfs() succeeds in getVolumeFreeSpace() https://bugs.webkit.org/show_bug.cgi?id=219138

Reviewed by Alexey Proskuryakov.

statvfs() returns Zero on success but getVolumeFreeSpace() treats a non Zero value
as a succes case. The condition is oppsite to the spec of statvfs().

* wtf/posix/FileSystemPOSIX.cpp:


Canonical link: https://commits.webkit.org/231754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270013 268f45cc-cd09-0410-ab3c-d52691b4dbfc